[package]
name = "xcanvas-charts"
version = "0.1.0"
edition = "2024"
description = "A high-performance canvas engine based on WebAssembly, This library is the charting module for xcanvas."
authors = ["happyboy <superhappyboy1995@gmail.com>"]
repository = "https://github.com/0xhappyboy/xcanvas"
license = "Apache-2.0"
readme = "README.md"
keywords = ["canvas", "webassembly", "wasm", "graphics", "rendering"]
categories = ["wasm", "graphics", "rendering"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.83" }

[profile.release]
opt-level = "s"
lto = true
